Converted to web app

--- a/Schooled.Tests/Schooled.Tests.csproj
+++ b/Schooled.Tests/Schooled.Tests.csproj
@@ -10,5 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Schooled\Schooled.csproj" />
+    <ProjectReference Include="..\Schooled\Schooled.csproj" />
   </ItemGroup>
 </Project>
